# SD-HW-3

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  openapi.yaml
configs/: config_vars.docker.yaml  config_vars.yaml  static_config.yaml
src/: auth_middleware.cpp  auth_middleware.hpp  main.cpp  models.hpp  storage_pg.cpp  storage_pg.hpp
src/handlers/: api_handlers.cpp  api_handlers.hpp
tests/: conftest.py  test_api.py
